--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -7,7 +7,7 @@
     "start": "json-server --watch db-js --port 3001"
   },
   "keywords": [],
-  "author": "",
+  "author": "vinicius",
   "license": "ISC",
   "dependencies": {
     "json-server": "^0.17.0"
