--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,14 +6,15 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "0.27.2",
+    "bootstrap": "5.1.3",
+    "css": "^3.0.0",
+    "font-awesome": "4.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "axios":"0.27.2",
-    "react-router":"6.3.0",
-    "font-awesome":"4.7.0",
-    "bootstrap":"5.1.3"
+    "react-router": "6.3.0",
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -23,8 +24,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
